--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,6 @@
+/* global.css */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body{
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
